Clean project and ignore large files

--- a/notebooks/01_exploratory_clean_data.ipynb
+++ b/notebooks/01_exploratory_clean_data.ipynb
@@ -1201,11 +1201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d80963f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#upload dataframe into clean csv file\n",
+    "df.to_csv('/Users/anhnguyendo/Documents/Python machine learning/Credit risk and loan default prediction/credit-risk-analysis-and-loan-default-prediction/data/processed/loan_credit_approval_cleaned.csv', index = False)"
+   ]
   }
  ],
  "metadata": {
